<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/White"
    tools:context="com.example.admin_home.calculation_utilities_100.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/electrical_energy"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center_horizontal"
                android:textSize="11pt"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_last_indication"
                android:textColor="@color/colorBlack"
                android:textSize="10pt"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtLastIndication"
                android:inputType="number"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_current_indication"
                android:textColor="@color/colorBlack"
                android:textSize="10pt"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtCurrentIndication"
                android:inputType="number"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner1"></Spinner>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvResult"
                android:textSize="10pt"
                android:textColor="@color/colorBlack"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnCalculate"
                android:text="@string/calculate"
                android:onClick="btnClickCalculate"
                style="@style/AllButtons"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnCategories"
                android:text="@string/categories"
                android:onClick="btnClickCategories"
                style="@style/AllButtons"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnExtended"
                android:text="@string/extended_information"
                android:onClick="btnClickExtendedInfo"
                style="@style/AllButtons"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>